<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    tools:context=".TrophiesActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/trophies_title" />

    <!-- sub-Trophies Text 01 -->
    <TextView
        android:id="@+id/trophies_stats01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="132dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txtTrophies_stats01"
        android:textSize="36sp"
        android:textColor="@color/colorTrophiesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <!-- Beers Counter, loads data from SharedPreferences -->
    <TextView
        android:id="@+id/trophies_beerCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="175dp"
        android:fontFamily="sans-serif-medium"
        android:text="0"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/colorTrophiesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trophies_stats01" />

    <!-- sub-Trophies Text 02 -->
    <TextView
        android:id="@+id/trophies_stats02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="116dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txtTrophies_stats02"
        android:textSize="36sp"
        android:textColor="@color/colorTrophiesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trophies_beerCount" />

    <!-- Country Counter, loading data from SharedPreferences -->
    <TextView
        android:id="@+id/trophies_countryCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="175dp"
        android:fontFamily="sans-serif-medium"
        android:text="0"
        android:textSize="36sp"
        android:textStyle="bold"
        android:textColor="@color/colorTrophiesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trophies_stats02" />

    <!-- sub-Trophies Text 03 -->
    <TextView
        android:id="@+id/trophies_stats03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="132dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txtTrophies_stats03"
        android:textSize="36sp"
        android:textColor="@color/colorTrophiesText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trophies_countryCount" />

    <!-- Share Button to share Statistics -->
    <Button
        android:id="@+id/trophies_shareButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="64dp"
        android:text="@string/txtTrophies_shareButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>