<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    tools:context=".DetailBeerActivity">

    <!-- Preview Image for ImageView -->
    <ImageView
        android:id="@+id/detailView_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher" />

    <!-- Brewery: Title -->
    <TextView
        android:id="@+id/detailView_title_brewery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorTitleText"
        android:text="@string/attribute_brewery"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Brewery: Content -->
    <TextView
        android:id="@+id/detailView_content_brewery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorContentText"
        android:maxWidth="170dp"
        android:text="@string/sample_string"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailView_title_brewery" />

    <!-- Beer Name: Title -->
    <TextView
        android:id="@+id/detailView_title_beername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorTitleText"
        android:text="@string/attribute_beer_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailView_content_brewery" />

    <!-- Beer Name: Content -->
    <TextView
        android:id="@+id/detailView_content_beername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorContentText"
        android:maxWidth="170dp"
        android:text="@string/sample_string"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailView_title_beername" />

    <!-- Beer Type: Title -->
    <TextView
        android:id="@+id/detailView_title_beertype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorTitleText"
        android:text="@string/attribute_beer_type"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailView_content_beername" />

    <!-- Beer Type: Content -->
    <TextView
        android:id="@+id/detailView_content_beertype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorContentText"
        android:text="@string/sample_string"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailView_title_beertype" />

    <!-- Country: Title -->
    <TextView
        android:id="@+id/detailView_title_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorTitleText"
        android:text="@string/attribute_country"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailView_content_beertype" />

    <!-- Country: Content -->
    <TextView
        android:id="@+id/detailView_content_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorContentText"
        android:text="@string/sample_string"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailView_title_country" />

    <!-- Personal Notes: Title -->
    <TextView
        android:id="@+id/detailView_title_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorTitleText"
        android:text="@string/attribute_notes"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailView_content_country" />

    <!-- Personal Notes: Content -->
    <TextView
        android:id="@+id/detailView_content_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingEnd="24dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/colorContentText"
        android:text="@string/sample_string"
        android:textSize="18sp"
        android:scrollbars="vertical"
        android:nestedScrollingEnabled="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailView_title_notes" />

    <!-- CardView container for random quotes -->
    <android.support.v7.widget.CardView
        android:id="@+id/detailView_cardViewQuotes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="18dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toBottomOf="@id/detailView_content_notes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorCardBackground">

            <!-- Content of the Quote -->
            <TextView
            android:id="@+id/detailView_quotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/colorCardText"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/detailView_quoteAuthor"/>

            <!-- Author of the Quote -->
            <TextView
            android:id="@+id/detailView_quoteAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:textColor="@color/colorCardText"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailView_quotes"
            />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>